# qbittorrent-discord-rich-presence

./: Cargo.toml
src/: main.rs  types.rs
