[package]
name = "qbittorrent-discord-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rpc-client = "0.3.0"
anyhow = "1.0.68"
tokio = { version = "1.23.0", features = ["full"] }
size = "0.4.1"

serde = { version ="1.0.147", features = ["derive"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.13", features = ["json", "serde_json"] }
futures = "0.3.25"
